@@ -68,6 +68,7 @@ Bugs fixed
 * #2576: ``sphinx.ext.imgmath`` crashes if subprocess raises error
 * #2577: ``sphinx.ext.imgmath``: Invalid argument are passed to dvisvgm
 * #2556: Xapian search does not work with Python 3
+* #2581: The search doesn't work if language="es" (spanish)
 
 
 Release 1.4.1 (released Apr 12, 2016)
